# text-to-doc-builder

./: .dockerignore  .env.example  .env.server.example  .gitignore  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
app/: __init__.py  main.py  worker.py
app/api/: dependencies.py  router.py
app/api/routes/: documents.py  health.py  ui.py
app/core/: config.py  errors.py  logging.py
app/db/: __init__.py  models.py  session.py
app/llm/: artifact_planner.py  docx_codegen.py  openrouter_client.py  request_parser.py  response_validator.py  schemas.py
app/renderers/: __init__.py  base.py  codegen_docx_renderer.py  docx_renderer.py  registry.py
app/repositories/: __init__.py  artifact_repository.py  document_job_repository.py  generation_request_repository.py  llm_generation_repository.py
app/schemas/: artifact_plan.py  document.py  document_spec.py  formats.py  generation_spec.py
app/services/: codegen_prompt_builder.py  defaults_resolver.py  document_worker.py  docx_sandbox.py  docx_validator.py  generation_pipeline.py  generation_service.py  prompt_builder.py  storage_service.py
docs/: deploy-vdsina.md  future-renderers.md
sandbox/docx-runtime/: Dockerfile
tests/unit/: test_codegen_docx_renderer.py  test_defaults_resolver.py  test_document_spec.py  test_documents.py  test_docx_codegen.py  test_docx_renderer.py  test_docx_validator.py  test_generation_pipeline.py  test_health.py  test_llm_response_validator.py  test_renderer_registry.py  test_ui.py
